image spacing fixed
removed figure tag (parent) from the logo img (child)

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,12 +31,12 @@ a {
 a:hover {
     color: var(--text-color-primary);
 }
-
+/*
 figure img {
     height: 100%;
     width: 100%;
 }
-
+*/
 h3 {
     font-weight: 900;
 }
@@ -58,7 +58,6 @@ nav {
 .nav__logo {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
 }
 
 .nav__logo--img {
